<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.dugsolutions.playerand.act.GenActivity"
                tools:showIn="@layout/gen_activity">

    <!--<TextView-->
        <!--android:id="@+id/player_name"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="20dp"/>-->

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev"
            style="@style/FrameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/btn_prev"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/roll"
            style="@style/FrameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/btn_roll"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/next"
            style="@style/FrameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_next"
            android:textAllCaps="false"/>
    </LinearLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/fragment_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
                 android:layout_above="@id/buttons"
                 android:layout_marginTop="10dp"
                 tools:context=".act.GenCharsFragment">
    </FrameLayout>

    <!--<FrameLayout-->
        <!--android:id="@+id/main_list_frame"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@id/buttons"-->
        <!--android:layout_below="@id/frame_title"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="20dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:visibility="gone">-->

        <!--<android.support.v7.widget.RecyclerView-->
            <!--android:id="@+id/main_list"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_margin="2dp"-->
            <!--android:background="@drawable/background_shadow"-->
            <!--android:elevation="3dp"/>-->

        <!--<TextView-->
            <!--android:id="@+id/empty"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:text="@string/error_empty"-->
            <!--android:textSize="25sp"-->
            <!--android:visibility="gone"/>-->

    <!--</FrameLayout>-->

</RelativeLayout>
